[2.February 2009]
- initfv.rb: ScrollingCredits widget used in the menu (yeah! unlimited space
  for new developers! :) )

[1.February 2009]
- entities/tombstone.rb: removed funny useless state classes (in 2005 I was
  writing freeVikings and reading book about Design Patterns, but not 
  everywhere I was able to use them properly...), added nogath's animated
  tombstone graphic
- gfx/tombstone.png: spritesheet of animated tombstone
- config/config.rb, config/defaults.conf, freevikings.rb: 
  fixed documentation about entry 'frame delay' (option -d)
- topmenu.rb: menu placed a bit higher (for longer credits to fit on the 
  screen)

[31.January 2009]
- gfx/stone_firespitter.png: replaced by nogath's
- initfv.rb: Federico Borrone AKA nogath added to Credits
- gfx/brick_destroyed.tga: empty image removed
- bomb.rb: moved to entities/ (I must have forgotten to do so earlier)
- README -> README.txt, LICENSE -> LICENSE.txt,
  (because of users of Windows: README should be readable even for total
  Windows newbie and thus it should have a proper extension;
  LICENSE makes name-clash with directory licenses/ on Windows filesystems.)
- util/make_release.rb: changed README filename
- CREDITS, initfv.rb: credits aren't hard-coded in the code of menu,
  but loaded from file CREDITS

[30.January 2009]
- gfx/fireball.png: gfx/brick* : replaced by nogath's
- wall.rb: image filenames updated
- entities/key.rb, entities/lock.rb, gfx/key_*, gfx/lock_*:
  old graphics of lock and keys replaced by Magnus'es

[29.January 2009]
- gfx/fireball.png, gfx/stone_fireballspitter.png,
  entities/fireball.png, entities/fireballspitter.rb,
  testing level FireballSpitter:
  created new game object: statue of dragon's head which spits fireballs

[27.January 2009]
- utils/make_release.rb: task :ftp commented out
- monster.rb: should have already be removed
- TODO: added results of my communication with MasterPhW

[26.January 2009]
- exit.rb: Exit#z # -> -100 (should be behind everything else)