@@ -29,7 +29,6 @@ requests on graphics and other content move to the forum
              vertical and horizontal state can't be so much "standalone" -
              it leads to unknown states etc.)
     (-) bomb's flame can't reach behind wall or shield
-    (-) Dropped bomb stops on a shield
 
 (-) Frame limit
     (-) Automatic frame limit (optional)
